[package]
name = "figment-nested-defaults"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
clap = { version = "4.0.15", features = ["derive"] }
figment = { version = "0.10", features = ["toml"], git = "https://github.com/SergioBenitez/Figment.git", rev = "a003ffa" }
serde = { version = "1", features = ["derive"] }